[tool.poetry]
name = "transaction-analysis-application"
version = "0.1.0"
description = ""
authors = ["DonPadla <vovavoroncov@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flake8 = "^7.1.1"
pandas = "^2.2.3"
openpyxl = "^3.1.5"
requests = "^2.32.3"
pytest = "^8.3.4"
path = "^17.0.0"


[tool.poetry.group.lint.dependencies]
mypy = "^1.13.0"
black = "^24.10.0"
isort = "^5.13.2"


[tool.poetry.group.dev.dependencies]
pytest-cov = "^6.0.0"

[tool.black]
line-length = 119
exclude = ".git"

[tool.isort]
line_length = 119

[tool.mypy]
disallow_untyped_defs = true
warn_return_any = true
exclude = 'venv'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


